<resources>
    <string name="app_name">ImplicitIntent</string>
    <string name="action_settings">Settings</string>
    <string name="button01">Call Browser</string>
    <string name="button02">Call Someone</string>
    <string name="button03">Dial</string>
    <string name="button04">Show Map</string>
    <string name="button05">Search on Map</string>
    <string name="button06">Take Picture</string>
    <string name="button07">Show Contact</string>
    <string name="button08">Edit first Contact</string>
    <string name="ADDEVENT">Add a event</string>
</resources>
