<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_implicit" tools:context=".Implicit">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button01"
        android:id="@+id/button01"
        android:onClick="callIntent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button02"
        android:id="@+id/button02"
        android:onClick="callIntent"
        android:layout_below="@+id/button01"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button03"
        android:id="@+id/button03"
        android:onClick="callIntent"
        android:layout_below="@+id/button02"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button04"
        android:id="@+id/button04"
        android:onClick="callIntent"
        android:layout_below="@+id/button03"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button05"
        android:id="@+id/button05"
        android:onClick="callIntent"
        android:layout_below="@+id/button04"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button06"
        android:id="@+id/button06"
        android:onClick="callIntent"
        android:layout_below="@+id/editText03"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button07"
        android:id="@+id/button07"
        android:onClick="callIntent"
        android:layout_below="@+id/button06"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button08"
        android:id="@+id/button08"
        android:onClick="callIntent"
        android:layout_below="@+id/button07"
        android:layout_alignLeft="@+id/button07"
        android:layout_alignStart="@+id/button07" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text|textUri"
        android:ems="8"
        android:id="@+id/editText01"
        android:layout_above="@+id/editText02"
        android:layout_alignRight="@+id/editText02"
        android:layout_alignEnd="@+id/editText02" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="8"
        android:id="@+id/editText02"
        android:layout_alignBottom="@+id/button02"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="8"
        android:id="@+id/editText03"
        android:layout_alignBottom="@+id/button05"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ADDEVENT"
        android:id="@+id/button09"
        android:onClick="callIntent"
        android:layout_below="@+id/button08"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
